clean and rm collapse bug all ok

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -38,7 +38,7 @@ $background-color: #f6f6f6;
       transform: rotate(-180deg);
     }
   }
-  &__content {
+  &__column {
     display: flex;
     width: 100%;
     background-color: $background-color;
@@ -49,41 +49,53 @@ $background-color: #f6f6f6;
     overflow: hidden;
     border-radius: 0 0 8px 8px;
     z-index: 1;
-    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    &.opened {
-      opacity: 1;
-      min-height: 150px;
-      max-height: 300px;
-      // car height auto ne fonctionne pas avec les animation
-    }
+    transition: max-height 0.4s ease-in-out, opacity 0.3s, linear 0.2s;
     p {
       width: 90%;
       margin-left: 15px;
       margin-right: 15px;
       font-weight: 300;
     }
-    &__flexrow {
-      width: auto;
-      flex-direction: column;
-      padding: 20px;
-      &.opened {
-        max-height: 300px;
-      }
-      p {
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        margin-top: 5px;
-      }
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        font-weight: 350;
-      }
-      li {
-        margin-top: 5px;
-      }
+    &.columnOpen {
+      opacity: 1;
+      max-height: 300px;
+      // car height auto ne fonctionne pas avec les animation
+      transition: max-height 0.4s ease-in-out, opacity 0.3s;
+    }
+  }
+  &__row {
+    position: relative;
+    top: -6px;
+    border-radius: 0 0 8px 8px;
+    z-index: 1;
+    width: auto;
+    display: flex;
+    background-color: $background-color;
+    flex-direction: column;
+    padding: 20px;
+    overflow: hidden;
+    opacity: 0;
+    height: 0;
+    transition: height 0.4s ease-in-out, opacity 0.3s;
+    p {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      margin-top: 5px;
+      font-weight: 330;
+    }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      font-weight: 330;
+    }
+    li {
+      margin-top: 5px;
+    }
+    &.rowOpen {
+      height: 200px;
+      opacity: 1;
     }
   }
 }
